Added new images

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Affordable and proffesiponal web design">
     <meta name="keywords" content=""web design, affordable websites>
     <meta name="author" content="Drew">
-    <title>Drews Website</title>
+    <title>CIC</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
         <div class="container">   
             <div id ="branding">
-                <h1>Acme Web Design</h1>   
+                <h1>Roger Williams University Cybersecurity and Intel</h1>   
             </div>
             <nav>
                 <ul>
@@ -27,8 +27,8 @@
 
     <section id="showcase">
         <div class="container">
-            <h1>Affordable Proffesional Web Design</h1>
-            <p>Vivamus maximus ante sem, quis sodales massa fermentum vitae. Etiam condimentum metus aliquet, tincidunt metus a, pharetra dui. Maecenas a dolor condimentum diam pharetra maximus sed eget ipsum. Suspendisse accumsan enim a aliquam pharetra. Etiam tempor porta lobortis. Aliquam tristique vitae eros et pellentesque. Nunc non enim tortor. Nam aliquam pellentesque egestas. Mauris tempor, dui quis aliquam porttitor, sapien eros lacinia sapien, quis condimentum justo nisl ut risus. Mauris nisi ipsum, porttitor non placerat quis, ullamcorper id enim.</p>
+            <h1>Cybersecurity & Intel</h1>
+            <p>The Cybersecurity and Intel Club [CIC] will provide support for student learning by creating a community for those interested in cybersecurity and information security. Club activities range from student gatherings to professional speakers, as well as trips to professional development conferences (Defcon, Bsides, Hackfest, etc).</p>
         </div>
         </section>
 
@@ -45,18 +45,18 @@
         <section id="boxes">
             <div class="container">
                 <div class="box">
-                    <img src="./img/logo_html.png">   
-                    <h3>HTML5 Markup</h3>
+                    <img src="./img/cic_Logo.jpg">   
+                    <h3>Members</h3>
                     <p>Vivamus maximus ante sem, quis sodales massa fermentum vitae. Etiam condimentum metus aliquet, tincidunt metus a, pharetra dui.</p>
                 </div>
                 <div class="box">
-                    <img src="./img/logo_css.png">
-                    <h3>CSS3 Styling</h3>
+                    <img src="./img/gitthublogo.png">
+                    <h3>Projects</h3>
                     <p>Vivamus maximus ante sem, quis sodales massa fermentum vitae. Etiam condimentum metus aliquet, tincidunt metus a, pharetra dui.</p>
                 </div>
                 <div class="box">
-                    <img src="./img/logo_brush.png">
-                    <h3>Graphic Design</h3>
+                    <img src="./img/neccdc2024logo.png">
+                    <h3>Competitions</h3>
                     <p>Vivamus maximus ante sem, quis sodales massa fermentum vitae. Etiam condimentum metus aliquet, tincidunt metus a, pharetra dui.</p>
                 </div>
             </div>
