--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
 
         <footer>
-            <p>Acme Web Design, Copyright &copy; 2024</p>
+            <p>Roger Williams Comsc210, Copyright &copy; 2024</p>
         </footer>
 
     </section>
